...
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">


    <RadioButton
        android:text="I am a TA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center_vertical"

        android:id="@+id/radioButton" />

    <RadioButton
        android:text="I am a Student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_gravity="center_vertical|right"
        android:id="@+id/radioButton2" />
    </RadioGroup>

    <Button
        android:text="Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@color/submitButton"
        android:textColor="#ffffff"
        android:id="@+id/button" />

</FrameLayout>

