...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/signIn_editText_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_in_email"
            />
        <EditText
            android:id="@+id/signIn_editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textPassword"
            android:hint="@string/sign_in_password"
            />
        <ImageButton
            android:id="@+id/signIn_imageButton_login"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/sign_in_button_height"
            android:src="@drawable/selector_button_login"
            android:layout_margin="@dimen/sign_in_button_margin"
            />
        <LinearLayout
...
