...
        android:layout_alignStart="@+id/gradesSection"
        android:layout_marginTop="12dp"
        android:layout_alignRight="@+id/gradesSection"
        android:layout_alignEnd="@+id/gradesSection">

        <Button
            android:id="@+id/openDiscussionBoard"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:text="@string/open_discussion_board"/>
    </RelativeLayout>

...
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/announcement" />

        <Button
            android:id="@+id/add_discussion_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/add_button_discussion" />

        <Button
            android:id="@+id/remove_discussion_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/add_discussion_group"
            android:layout_toStartOf="@+id/add_discussion_group"
            android:padding="5dp"
...
